// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a busy indicator is displayed if clustered tasks are loading 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LocatorMap
    browsingChallenge={
        Object {
            "id": 123,
          }
    }
    layerSourceName="foo"
    loadingClusteredTasks={true}
    mapBounds={
        Object {
            "locator": Object {
              "bounds": Object {
                "_northEast": Object {
                  "lat": 0,
                  "lng": 0,
                },
                "_southWest": Object {
                  "lat": 0,
                  "lng": 0,
                },
              },
            },
          }
    }
    setLocatorMapBounds={[Function]}
    updateBoundedChallenges={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "123",
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Connect(Component)
          browsingChallenge={
                    Object {
                              "id": 123,
                            }
          }
          layerSourceName="foo"
          loadingClusteredTasks={true}
          mapBounds={
                    Object {
                              "locator": Object {
                                "bounds": Object {
                                  "_northEast": Object {
                                    "lat": 0,
                                    "lng": 0,
                                  },
                                  "_southWest": Object {
                                    "lat": 0,
                                    "lng": 0,
                                  },
                                },
                              },
                            }
          }
          setLocatorMapBounds={[Function]}
          updateBoundedChallenges={[Function]}
/>,
        <EnhancedMap
          animate={true}
          center={
                    Object {
                              "lat": 0,
                              "lng": 45,
                            }
          }
          features={undefined}
          initialBounds={
                    Object {
                              "_northEast": Object {
                                "lat": 0,
                                "lng": 0,
                              },
                              "_southWest": Object {
                                "lat": 0,
                                "lng": 0,
                              },
                            }
          }
          justFitFeatures={false}
          maxZoom={18}
          minZoom={2}
          onBoundsChange={[Function]}
          setInitialBounds={false}
          zoom={3}
          zoomControl={false}
>
          <ZoomControl
                    position="topright"
          />
          <Connect(InjectIntl(SourcedTileLayer))
                    defaultLayer="foo"
          />
</EnhancedMap>,
        <BusySpinner />,
      ],
      "className": "full-screen-map",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "browsingChallenge": Object {
            "id": 123,
          },
          "layerSourceName": "foo",
          "loadingClusteredTasks": true,
          "mapBounds": Object {
            "locator": Object {
              "bounds": Object {
                "_northEast": Object {
                  "lat": 0,
                  "lng": 0,
                },
                "_southWest": Object {
                  "lat": 0,
                  "lng": 0,
                },
              },
            },
          },
          "setLocatorMapBounds": [Function],
          "updateBoundedChallenges": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animate": true,
          "center": Object {
            "lat": 0,
            "lng": 45,
          },
          "children": Array [
            <ZoomControl
              position="topright"
/>,
            <Connect(InjectIntl(SourcedTileLayer))
              defaultLayer="foo"
/>,
            false,
          ],
          "features": undefined,
          "initialBounds": Object {
            "_northEast": Object {
              "lat": 0,
              "lng": 0,
            },
            "_southWest": Object {
              "lat": 0,
              "lng": 0,
            },
          },
          "justFitFeatures": false,
          "maxZoom": 18,
          "minZoom": 2,
          "onBoundsChange": [Function],
          "setInitialBounds": false,
          "zoom": 3,
          "zoomControl": false,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "position": "topright",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultLayer": "foo",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "123",
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Connect(Component)
            browsingChallenge={
                        Object {
                                    "id": 123,
                                  }
            }
            layerSourceName="foo"
            loadingClusteredTasks={true}
            mapBounds={
                        Object {
                                    "locator": Object {
                                      "bounds": Object {
                                        "_northEast": Object {
                                          "lat": 0,
                                          "lng": 0,
                                        },
                                        "_southWest": Object {
                                          "lat": 0,
                                          "lng": 0,
                                        },
                                      },
                                    },
                                  }
            }
            setLocatorMapBounds={[Function]}
            updateBoundedChallenges={[Function]}
/>,
          <EnhancedMap
            animate={true}
            center={
                        Object {
                                    "lat": 0,
                                    "lng": 45,
                                  }
            }
            features={undefined}
            initialBounds={
                        Object {
                                    "_northEast": Object {
                                      "lat": 0,
                                      "lng": 0,
                                    },
                                    "_southWest": Object {
                                      "lat": 0,
                                      "lng": 0,
                                    },
                                  }
            }
            justFitFeatures={false}
            maxZoom={18}
            minZoom={2}
            onBoundsChange={[Function]}
            setInitialBounds={false}
            zoom={3}
            zoomControl={false}
>
            <ZoomControl
                        position="topright"
            />
            <Connect(InjectIntl(SourcedTileLayer))
                        defaultLayer="foo"
            />
</EnhancedMap>,
          <BusySpinner />,
        ],
        "className": "full-screen-map",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "browsingChallenge": Object {
              "id": 123,
            },
            "layerSourceName": "foo",
            "loadingClusteredTasks": true,
            "mapBounds": Object {
              "locator": Object {
                "bounds": Object {
                  "_northEast": Object {
                    "lat": 0,
                    "lng": 0,
                  },
                  "_southWest": Object {
                    "lat": 0,
                    "lng": 0,
                  },
                },
              },
            },
            "setLocatorMapBounds": [Function],
            "updateBoundedChallenges": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animate": true,
            "center": Object {
              "lat": 0,
              "lng": 45,
            },
            "children": Array [
              <ZoomControl
                position="topright"
/>,
              <Connect(InjectIntl(SourcedTileLayer))
                defaultLayer="foo"
/>,
              false,
            ],
            "features": undefined,
            "initialBounds": Object {
              "_northEast": Object {
                "lat": 0,
                "lng": 0,
              },
              "_southWest": Object {
                "lat": 0,
                "lng": 0,
              },
            },
            "justFitFeatures": false,
            "maxZoom": 18,
            "minZoom": 2,
            "onBoundsChange": [Function],
            "setInitialBounds": false,
            "zoom": 3,
            "zoomControl": false,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "position": "topright",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "defaultLayer": "foo",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            false,
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`it renders a full screen map 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LocatorMap
    layerSourceName="foo"
    mapBounds={
        Object {
            "locator": Object {
              "bounds": Object {
                "_northEast": Object {
                  "lat": 0,
                  "lng": 0,
                },
                "_southWest": Object {
                  "lat": 0,
                  "lng": 0,
                },
              },
            },
          }
    }
    setLocatorMapBounds={[Function]}
    updateBoundedChallenges={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "locator",
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Connect(Component)
          layerSourceName="foo"
          mapBounds={
                    Object {
                              "locator": Object {
                                "bounds": Object {
                                  "_northEast": Object {
                                    "lat": 0,
                                    "lng": 0,
                                  },
                                  "_southWest": Object {
                                    "lat": 0,
                                    "lng": 0,
                                  },
                                },
                              },
                            }
          }
          setLocatorMapBounds={[Function]}
          updateBoundedChallenges={[Function]}
/>,
        <EnhancedMap
          animate={true}
          center={
                    Object {
                              "lat": 0,
                              "lng": 45,
                            }
          }
          features={null}
          initialBounds={
                    Object {
                              "_northEast": Object {
                                "lat": 0,
                                "lng": 0,
                              },
                              "_southWest": Object {
                                "lat": 0,
                                "lng": 0,
                              },
                            }
          }
          justFitFeatures={false}
          maxZoom={18}
          minZoom={2}
          onBoundsChange={[Function]}
          setInitialBounds={false}
          zoom={3}
          zoomControl={false}
>
          <ZoomControl
                    position="topright"
          />
          <Connect(InjectIntl(SourcedTileLayer))
                    defaultLayer="foo"
          />
</EnhancedMap>,
        false,
      ],
      "className": "full-screen-map",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "layerSourceName": "foo",
          "mapBounds": Object {
            "locator": Object {
              "bounds": Object {
                "_northEast": Object {
                  "lat": 0,
                  "lng": 0,
                },
                "_southWest": Object {
                  "lat": 0,
                  "lng": 0,
                },
              },
            },
          },
          "setLocatorMapBounds": [Function],
          "updateBoundedChallenges": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animate": true,
          "center": Object {
            "lat": 0,
            "lng": 45,
          },
          "children": Array [
            <ZoomControl
              position="topright"
/>,
            <Connect(InjectIntl(SourcedTileLayer))
              defaultLayer="foo"
/>,
            false,
          ],
          "features": null,
          "initialBounds": Object {
            "_northEast": Object {
              "lat": 0,
              "lng": 0,
            },
            "_southWest": Object {
              "lat": 0,
              "lng": 0,
            },
          },
          "justFitFeatures": false,
          "maxZoom": 18,
          "minZoom": 2,
          "onBoundsChange": [Function],
          "setInitialBounds": false,
          "zoom": 3,
          "zoomControl": false,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "position": "topright",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultLayer": "foo",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
        ],
        "type": [Function],
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "locator",
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Connect(Component)
            layerSourceName="foo"
            mapBounds={
                        Object {
                                    "locator": Object {
                                      "bounds": Object {
                                        "_northEast": Object {
                                          "lat": 0,
                                          "lng": 0,
                                        },
                                        "_southWest": Object {
                                          "lat": 0,
                                          "lng": 0,
                                        },
                                      },
                                    },
                                  }
            }
            setLocatorMapBounds={[Function]}
            updateBoundedChallenges={[Function]}
/>,
          <EnhancedMap
            animate={true}
            center={
                        Object {
                                    "lat": 0,
                                    "lng": 45,
                                  }
            }
            features={null}
            initialBounds={
                        Object {
                                    "_northEast": Object {
                                      "lat": 0,
                                      "lng": 0,
                                    },
                                    "_southWest": Object {
                                      "lat": 0,
                                      "lng": 0,
                                    },
                                  }
            }
            justFitFeatures={false}
            maxZoom={18}
            minZoom={2}
            onBoundsChange={[Function]}
            setInitialBounds={false}
            zoom={3}
            zoomControl={false}
>
            <ZoomControl
                        position="topright"
            />
            <Connect(InjectIntl(SourcedTileLayer))
                        defaultLayer="foo"
            />
</EnhancedMap>,
          false,
        ],
        "className": "full-screen-map",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "layerSourceName": "foo",
            "mapBounds": Object {
              "locator": Object {
                "bounds": Object {
                  "_northEast": Object {
                    "lat": 0,
                    "lng": 0,
                  },
                  "_southWest": Object {
                    "lat": 0,
                    "lng": 0,
                  },
                },
              },
            },
            "setLocatorMapBounds": [Function],
            "updateBoundedChallenges": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animate": true,
            "center": Object {
              "lat": 0,
              "lng": 45,
            },
            "children": Array [
              <ZoomControl
                position="topright"
/>,
              <Connect(InjectIntl(SourcedTileLayer))
                defaultLayer="foo"
/>,
              false,
            ],
            "features": null,
            "initialBounds": Object {
              "_northEast": Object {
                "lat": 0,
                "lng": 0,
              },
              "_southWest": Object {
                "lat": 0,
                "lng": 0,
              },
            },
            "justFitFeatures": false,
            "maxZoom": 18,
            "minZoom": 2,
            "onBoundsChange": [Function],
            "setInitialBounds": false,
            "zoom": 3,
            "zoomControl": false,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "position": "topright",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "defaultLayer": "foo",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            false,
          ],
          "type": [Function],
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`the busy indicator is removed once tasks are done loading 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LocatorMap
    browsingChallenge={
        Object {
            "id": 123,
          }
    }
    layerSourceName="foo"
    loadingClusteredTasks={false}
    mapBounds={
        Object {
            "locator": Object {
              "bounds": Object {
                "_northEast": Object {
                  "lat": 0,
                  "lng": 0,
                },
                "_southWest": Object {
                  "lat": 0,
                  "lng": 0,
                },
              },
            },
          }
    }
    setLocatorMapBounds={[Function]}
    updateBoundedChallenges={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "123",
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Connect(Component)
          browsingChallenge={
                    Object {
                              "id": 123,
                            }
          }
          layerSourceName="foo"
          loadingClusteredTasks={false}
          mapBounds={
                    Object {
                              "locator": Object {
                                "bounds": Object {
                                  "_northEast": Object {
                                    "lat": 0,
                                    "lng": 0,
                                  },
                                  "_southWest": Object {
                                    "lat": 0,
                                    "lng": 0,
                                  },
                                },
                              },
                            }
          }
          setLocatorMapBounds={[Function]}
          updateBoundedChallenges={[Function]}
/>,
        <EnhancedMap
          animate={true}
          center={
                    Object {
                              "lat": 0,
                              "lng": 45,
                            }
          }
          features={undefined}
          initialBounds={
                    Object {
                              "_northEast": Object {
                                "lat": 0,
                                "lng": 0,
                              },
                              "_southWest": Object {
                                "lat": 0,
                                "lng": 0,
                              },
                            }
          }
          justFitFeatures={false}
          maxZoom={18}
          minZoom={2}
          onBoundsChange={[Function]}
          setInitialBounds={false}
          zoom={3}
          zoomControl={false}
>
          <ZoomControl
                    position="topright"
          />
          <Connect(InjectIntl(SourcedTileLayer))
                    defaultLayer="foo"
          />
</EnhancedMap>,
        false,
      ],
      "className": "full-screen-map",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "browsingChallenge": Object {
            "id": 123,
          },
          "layerSourceName": "foo",
          "loadingClusteredTasks": false,
          "mapBounds": Object {
            "locator": Object {
              "bounds": Object {
                "_northEast": Object {
                  "lat": 0,
                  "lng": 0,
                },
                "_southWest": Object {
                  "lat": 0,
                  "lng": 0,
                },
              },
            },
          },
          "setLocatorMapBounds": [Function],
          "updateBoundedChallenges": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animate": true,
          "center": Object {
            "lat": 0,
            "lng": 45,
          },
          "children": Array [
            <ZoomControl
              position="topright"
/>,
            <Connect(InjectIntl(SourcedTileLayer))
              defaultLayer="foo"
/>,
            false,
          ],
          "features": undefined,
          "initialBounds": Object {
            "_northEast": Object {
              "lat": 0,
              "lng": 0,
            },
            "_southWest": Object {
              "lat": 0,
              "lng": 0,
            },
          },
          "justFitFeatures": false,
          "maxZoom": 18,
          "minZoom": 2,
          "onBoundsChange": [Function],
          "setInitialBounds": false,
          "zoom": 3,
          "zoomControl": false,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "position": "topright",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultLayer": "foo",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
        ],
        "type": [Function],
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "123",
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Connect(Component)
            browsingChallenge={
                        Object {
                                    "id": 123,
                                  }
            }
            layerSourceName="foo"
            loadingClusteredTasks={false}
            mapBounds={
                        Object {
                                    "locator": Object {
                                      "bounds": Object {
                                        "_northEast": Object {
                                          "lat": 0,
                                          "lng": 0,
                                        },
                                        "_southWest": Object {
                                          "lat": 0,
                                          "lng": 0,
                                        },
                                      },
                                    },
                                  }
            }
            setLocatorMapBounds={[Function]}
            updateBoundedChallenges={[Function]}
/>,
          <EnhancedMap
            animate={true}
            center={
                        Object {
                                    "lat": 0,
                                    "lng": 45,
                                  }
            }
            features={undefined}
            initialBounds={
                        Object {
                                    "_northEast": Object {
                                      "lat": 0,
                                      "lng": 0,
                                    },
                                    "_southWest": Object {
                                      "lat": 0,
                                      "lng": 0,
                                    },
                                  }
            }
            justFitFeatures={false}
            maxZoom={18}
            minZoom={2}
            onBoundsChange={[Function]}
            setInitialBounds={false}
            zoom={3}
            zoomControl={false}
>
            <ZoomControl
                        position="topright"
            />
            <Connect(InjectIntl(SourcedTileLayer))
                        defaultLayer="foo"
            />
</EnhancedMap>,
          false,
        ],
        "className": "full-screen-map",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "browsingChallenge": Object {
              "id": 123,
            },
            "layerSourceName": "foo",
            "loadingClusteredTasks": false,
            "mapBounds": Object {
              "locator": Object {
                "bounds": Object {
                  "_northEast": Object {
                    "lat": 0,
                    "lng": 0,
                  },
                  "_southWest": Object {
                    "lat": 0,
                    "lng": 0,
                  },
                },
              },
            },
            "setLocatorMapBounds": [Function],
            "updateBoundedChallenges": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animate": true,
            "center": Object {
              "lat": 0,
              "lng": 45,
            },
            "children": Array [
              <ZoomControl
                position="topright"
/>,
              <Connect(InjectIntl(SourcedTileLayer))
                defaultLayer="foo"
/>,
              false,
            ],
            "features": undefined,
            "initialBounds": Object {
              "_northEast": Object {
                "lat": 0,
                "lng": 0,
              },
              "_southWest": Object {
                "lat": 0,
                "lng": 0,
              },
            },
            "justFitFeatures": false,
            "maxZoom": 18,
            "minZoom": 2,
            "onBoundsChange": [Function],
            "setInitialBounds": false,
            "zoom": 3,
            "zoomControl": false,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "position": "topright",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "defaultLayer": "foo",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            false,
          ],
          "type": [Function],
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
